# sguclient

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: codeql-analysis.yml
ipks/ar71xx/: libpcap_1.5.3-1_ar71xx.ipk  libpthread_0.9.33.2-1_ar71xx.ipk  sguclient_0.18-r0.18-luci_ar71xx.ipk  sguclient_0.19-r0.19-luci_ar71xx.ipk
ipks/ramips_24kec/: libpcap_1.5.3-1_ramips_24kec.ipk  libpthread_0.9.33.2-1_ramips_24kec.ipk  sguclient_0.18-r0.18-luci_ramips_24kec.ipk  sguclient_0.19-r0.19-luci_ramips_24kec.ipk
sguclient-OpenWrt-LuCI/: README.md  root
sguclient-OpenWrt-LuCI/sguclient/: Makefile
sguclient-OpenWrt-LuCI/sguclient/files/root/etc/config/: sguclient
sguclient-OpenWrt-LuCI/sguclient/files/root/etc/init.d/: sguclient
sguclient-OpenWrt-LuCI/sguclient/files/root/usr/lib/lua/luci/controller/: sguclient.lua
sguclient-OpenWrt-LuCI/sguclient/files/root/usr/share/sguclient/: sgud.sh
sguclient-OpenWrt-LuCI/sguclient/i18n/zh-cn/: sguclient.zh-cn.lmo  sguclient.zh-cn.lo
sguclient-OpenWrt-LuCI/sguclient/luci_files/root/etc/config/: sguclient
sguclient-OpenWrt-LuCI/sguclient/luci_files/root/etc/init.d/: sguclient
sguclient-OpenWrt-LuCI/sguclient/luci_files/root/usr/share/sguclient/: sgud.sh
sguclient-OpenWrt-LuCI/sguclient/src/: Makefile  dprotocol.c  dprotocol.h  main.c  md4.c  md4.h  md5.c  public.c  public.h  sguclient  sguclient.c  sguclient.h  sha1.c
sguclient-linux/: Makefile  dprotocol.c  dprotocol.h  main.c  md5.h  public.c  public.h  sguclient  sguclient.c  sguclient.h  sha1.h
(+6 files in other folders)
